<resources>
    <string name="app_name">Video Verse</string>
    <string name="tv_all_videos">All Videos</string>
    <string name="tv_all_folders">All Folders</string>
    <string name="tv_total_videos">Total Videos:</string>
    <string name="tv_total_folders">Total Folders:</string>
    <string name="tv_open">Open</string>
    <string name="tv_close">Close</string>
    <string name="tv_feedback">Feedback</string>
    <string name="tv_themes">Themes</string>
    <string name="tv_sort_order">Sort Order</string>
    <string name="tv_about">About</string>
    <string name="tv_exit">Exit</string>
    <string name="tv_nav_text"><![CDATA[Lets forget the world \nand watch a video!]]></string>
    <string name="tv_video_name">Video Name</string>
    <string name="tv_folder_name">Folder Name</string>
    <string name="tv_duration">00:00</string>
    <string name="tv_image">Image</string>
    <string name="tv_loading">Loading</string>
    <string name="tv_semi_colon">:</string>
    <string name="tv_lock">Lock Button</string>
    <string name="tv_back_button">Back Button</string>

    // For Custom Controls Additional
    <string name="tv_menu">Menu</string>
    <string name="tv_repeat_button">Repeat Button</string>
    <string name="tv_previous_button">Previous Button</string>
    <string name="tv_next_button">Next Button</string>
    <string name="tv_fullscreen_button">Fullscreen Button</string>
    <string name="tv_play_button">Play Button</string>

    // For Menu
    <string name="audio_track">Audio Track</string>
    <string name="subtitles">Subtitles</string>
    <string name="booster">Booster</string>
    <string name="speed">Speed</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="pip_mode">PIP Mode</string>
    <string name="tv_search">Search</string>

    // For More Features
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="info">Info</string>
    <string name="share">Share</string>

    // For Video Details Feature
    <string name="name">Name:</string>
    <string name="duration">Duration:</string>
    <string name="file_size">File Size:</string>
    <string name="location">Location:</string>
    <string name="tv_rotation_button">rotation button</string>
</resources>