<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/feedbackNav"
        android:title="@string/tv_feedback"
        android:icon="@drawable/all_videos_icon"/>

    <item
        android:id="@+id/themesNav"
        android:title="@string/tv_themes"
        android:icon="@drawable/all_folders_icon"/>

    <item
        android:id="@+id/sortOrderNav"
        android:title="@string/tv_sort_order"
        android:icon="@drawable/all_videos_icon"/>

    <item
        android:id="@+id/aboutNav"
        android:title="@string/tv_about"
        android:icon="@drawable/all_folders_icon"/>

    <item
        android:id="@+id/exitNav"
        android:title="@string/tv_exit"
        android:icon="@drawable/all_folders_icon"/>

</menu>