<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/audio_track"
            app:icon="@drawable/audio_icon"
            app:iconGravity="top"
            android:background="@android:color/transparent"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/subtitles"
            app:icon="@drawable/subtitles_icon"
            app:iconGravity="top"
            android:background="@android:color/transparent"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/booster"
            app:icon="@drawable/booster_icon"
            app:iconGravity="top"
            android:background="@android:color/transparent"
            style="@style/Widget.AppCompat.Button.Borderless"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/speed"
            app:icon="@drawable/speed_icon"
            app:iconGravity="top"
            android:background="@android:color/transparent"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/sleep_timer"
            app:icon="@drawable/timer_icon"
            app:iconGravity="top"
            android:background="@android:color/transparent"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/pip_mode"
            app:icon="@drawable/pip_icon"
            app:iconGravity="top"
            android:background="@android:color/transparent"
            style="@style/Widget.AppCompat.Button.Borderless"/>

    </LinearLayout>

</LinearLayout>