<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="bottom"
    android:background="#42000000"
    android:orientation="vertical">

    <com.google.android.exoplayer2.ui.DefaultTimeBar
        android:id="@id/exo_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:scrubber_color="@color/white"
        app:played_color="@color/white"
        app:unplayed_color="@color/white_transparent_20"
        app:buffered_color="@color/white_transparent_60"
        app:scrubber_enabled_size="10dp"
        app:scrubber_disabled_size="5dp"
        app:scrubber_dragged_size="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:id="@id/exo_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/tv_duration"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/tv_semi_colon"/>

        <TextView android:id="@id/exo_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/tv_loading"/>

    </LinearLayout>

</LinearLayout>
